# instagram-django

./: .gitignore  Dockerfile  pyproject.toml
accounts/: models.py  urls.py
accounts/migrations/: 0001_initial.py  0002_user_bio_user_follower_set_user_following_set_and_more.py  0003_user_avatar.py
core/: models.py
instagram/: settings.py  urls.py
instagram/settings/: common.py  dev.py  prod.py
posts/: admin.py  models.py  serializers.py  urls.py  views.py
posts/migrations/: 0001_initial.py
